fix: hide date when not set in frontmatter
Prevent 'January 1, 0001' from showing on pages without date field

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,8 +3,10 @@
   <header>
     <h1>{{ .Title }}</h1>
     <div class="post-meta">
+      {{ if .Date }}
       <span>{{ .Date.Format "January 2, 2006" }}</span>
       <span>&bull;</span>
+      {{ end }}
       <span>{{ .ReadingTime }} min read</span>
       {{ with .Params.categories }}
       <span>&bull;</span>
